--- a/jdbc-datasource/README.adoc
+++ b/jdbc-datasource/README.adoc
@@ -1,48 +1,60 @@
-# Extract, Transform and Load between two databases
+= Extract, Transform and Load between two databases: A Camel Quarkus example
+:cq-example-description: An example that shows how to extract, transform and load between two databases
 
-This project uses Quarkus, the Supersonic Subatomic Java Framework.
+{cq-description}
 
-If you want to learn more about Quarkus, please visit its website: https://quarkus.io/ .
+TIP: Check the https://camel.apache.org/camel-quarkus/latest/first-steps.html[Camel Quarkus User guide] for prerequisites
+and other general information.
 
-## Start the source and target databases
+== Start the source and target databases
 
 All the commands in this example are expected to be run from the example directory, at the same level than the `pom.xml` file.
 
 In a first terminal, let's start the source database by executing the command below:
 
-```shell script
+[source,shell]
+----
 docker run -p 5432:5432 \
 -e POSTGRES_USER=ETL_source_user \
 -e POSTGRES_PASSWORD=1234567@8_source \
 -e POSTGRES_DB=source_db \
 -v ${PWD}/src/test/resources/init-source-db.sql:/docker-entrypoint-initdb.d/init-source-db.sql \
 docker.io/postgres:15.0
-```
+----
 
 In a second terminal, let's start the target database:
 
-```shell script
+[source,shell]
+----
 docker run -p 5433:5432 \
 -e POSTGRES_USER=ETL_target_user \
 -e POSTGRES_PASSWORD=1234567@8_target \
 -e POSTGRES_DB=target_db \
 -v ${PWD}/src/test/resources/init-target-db.sql:/docker-entrypoint-initdb.d/init-target-db.sql \
 docker.io/postgres:15.0
-```
+----
 
-## Running the application in dev mode
+== Running the application in dev mode
 
 You can run your application in dev mode that enables live coding using:
 
-```shell script
+[source,shell]
+----
 mvn compile quarkus:dev
-```
+----
 
-> **_NOTE:_**  Quarkus now ships with a Dev UI, which is available in dev mode only at http://localhost:8080/q/dev/.
+[NOTE]
+====
+Quarkus now ships with a Dev UI, which is available in dev mode only at http://localhost:8080/q/dev/.
+====
+
+TIP: Please refer to the Development mode section of
+https://camel.apache.org/camel-quarkus/latest/first-steps.html#_development_mode[Camel Quarkus User guide] for more details.
 
 Extract, Transform and Load related logs should be output as below:
 
-```shell script
+[source,shell]
+----
 2023-11-14 15:12:55,878 INFO  [route17] (Camel (camel-9) thread #9 - timer://insertCamel) Extracting data from source database
 2023-11-14 15:12:55,881 INFO  [route17] (Camel (camel-9) thread #9 - timer://insertCamel) -> Transforming review for hotel 'Grand Hotel'
 2023-11-14 15:12:55,886 INFO  [route17] (Camel (camel-9) thread #9 - timer://insertCamel) -> Loading transformed data in target database
@@ -50,45 +62,56 @@ Extract, Transform and Load related logs should be output as below:
 2023-11-14 15:12:55,897 INFO  [route17] (Camel (camel-9) thread #9 - timer://insertCamel) -> Loading transformed data in target database
 2023-11-14 15:12:55,904 INFO  [route17] (Camel (camel-9) thread #9 - timer://insertCamel) -> Transforming review for hotel 'Small Hotel'
 2023-11-14 15:12:55,909 INFO  [route17] (Camel (camel-9) thread #9 - timer://insertCamel) -> Loading transformed data in target database
-```
+----
 
-## Packaging and running the application
+=== Packaging and running the application
+
+Once you are done with developing you may want to package and run the application.
+
+TIP: Find more details about the JVM mode and Native mode in the Package and run section of
+https://camel.apache.org/camel-quarkus/latest/first-steps.html#_package_and_run_the_application[Camel Quarkus User guide]
 
 The application can be packaged using:
 
-```shell script
+[source,shell]
+----
 mvn package
-```
+----
+
 It produces the `quarkus-run.jar` file in the `target/quarkus-app/` directory.
 Be aware that it’s not an  _über-jar_  as the dependencies are copied into the `target/quarkus-app/lib/` directory.
 
 The application is now runnable executing the command below:
 
-```
+[source,shell]
+----
 java -jar target/quarkus-app/quarkus-run.jar
-```
+----
 
 The application should output the same logs than in previous section.
 
-## Creating a native executable
+==== Creating a native executable
 
 Finally, the application can be compiled to native with the following command:
 
-```shell script
+[source,shell]
+----
 mvn package -Dnative
-```
+----
 
 Or, if you don't have GraalVM installed, you can run the native executable build in a container using: 
 
-```shell script
+[source,shell]
+----
 mvn package -Dnative -Dquarkus.native.container-build=true
-```
+----
 
 Either way, the resulting native executable could be start as below:
 
-```
+[source,shell]
+----
 ./target/*-runner
-```
+----
 
 The application should output the same logs than in previous section.
 
