--- a/fhir/README.adoc
+++ b/fhir/README.adoc
@@ -1,24 +1,30 @@
 = FHIR: A Camel Quarkus example
 :cq-example-description: An example that shows how to use Camel FHIR with Quarkus.
 
-{cq-description} It also shows how you can build custom health-checks and have them automatic discovered by Camel and
-used as parts of its health-check system.
+{cq-description}
 
 TIP: Check the https://camel.apache.org/camel-quarkus/latest/first-steps.html[Camel Quarkus User guide] for prerequisites
 and other general information.
 
-The example has two routes. The timer route performs a given task at regular interval. For the sake of this example we'll say
-that this task unexpectedly freezes the service from time to time. The details can be consulted at http://localhost:8080/q/health.
-The custom health check is expected to report UNKNOWN on first consultation, then UP during 10 seconds, and finally DOWN so as to
-simulate that the service is frozen.
+This example exposes a simple REST API to upload HL7V2 patients from a file, convert them to FHIR R4 patients and send them to a FHIR server.
 
-The 2nd route is on purpose made to fail on startup by configuring netty to an unknown host.
-Camel supervising route controller will attempt to restart the route up till 10 times before exhausting.
-The routes health check will therefore report this route as DOWN until its exhausted where the states are changed to UNKNOWN.
+=== FHIR Server container
 
-The details can be seen at runtime via the following url from a web browser: http://localhost:8080/q/health.
+To run the application in development, from the runnable JAR or as a native application, you must first start a FHIR server container.
+
+[source,shell]
+----
+ docker run -ti -e hapi.fhir.fhir_version=R4 \
+                -e hapi.fhir.allow_multiple_delete=true -e \
+                -e hapi.fhir.reuse_cached_search_results_millis=-1 \
+                -p 8080:8080 docker.io/hapiproject/hapi:v7.4.0
+----
+
+Note that the container startup can take up to 30 seconds to complete.
 
 === Start in the Development mode
+
+Ensure that the aforementioned FHIR server container is started and run.
 
 [source,shell]
 ----
@@ -31,7 +37,44 @@ workspace. Any modifications in your project will automatically take effect in t
 TIP: Please refer to the Development mode section of
 https://camel.apache.org/camel-quarkus/latest/first-steps.html#_development_mode[Camel Quarkus User guide] for more details.
 
-You can check the health check status by calling the following url from a web browser: http://localhost:8080/q/health
+To interact with the application, first capture the local host / port of the running application.
+
+[source,shell]
+----
+$ APPLICATION_HOST=localhost:8080
+----
+
+Next, upload some patient data.
+
+[source,shell]
+----
+$ curl -X POST -H 'Content-Type: application/json' --data-binary @src/test/resources/data/hl7v2.patient "http://${APPLICATION_HOST}/api/patients"
+----
+
+A JSON response will be generated of the patient record.
+
+[source,json]
+----
+{
+  "resourceType": "Patient",
+  "id": "1",
+  "name": [
+    {
+      "family": "Price",
+      "given": [
+        "Vincent"
+      ]
+    }
+  ]
+}
+----
+
+Use the `id` value to retrieve the patient record.
+
+[source,shell]
+----
+$ curl "http://${APPLICATION_HOST}/api/patients/1"
+----
 
 === Package and run the application
 
@@ -39,6 +82,8 @@ Once you are done with developing you may want to package and run the applicatio
 
 TIP: Find more details about the JVM mode and Native mode in the Package and run section of
 https://camel.apache.org/camel-quarkus/latest/first-steps.html#_package_and_run_the_application[Camel Quarkus User guide]
+
+Ensure that the aforementioned FHIR server container is started before running the commands below.
 
 === JVM mode
 
@@ -65,6 +110,152 @@ $ ./target/*-runner
 ...
 [io.quarkus] (main) camel-quarkus-examples-... started in 0.026s. Listening on: http://0.0.0.0:8080
 ...
+----
+
+==== Deploying to Kubernetes
+
+You can build a container image for the application like this. Refer to the https://quarkus.io/guides/deploying-to-kubernetes[Quarkus Kubernetes guide] for options around customizing image names, registries etc.
+
+[source,shell]
+----
+$ mvn clean package -DskipTests -Dquarkus.container-image.build=true
+----
+
+If you are using a local development cluster like Kind or k3s, you can use host the container image on your local host. Or, with minikube, use the Docker daemon from the cluster virtual machine `eval $(minikube docker-env)`. Otherwise, you'll need to push the image to a registry of your choosing.
+
+Next apply the necessary resources to the cluster.
+
+[source,shell]
+----
+$ kubectl apply -f target/kubernetes/kubernetes.yml
+
+service/camel-quarkus-examples-fhir created
+service/fhir-server created
+deployment.apps/camel-quarkus-examples-fhir created
+deployment.apps/fhir-server-deployment created
+----
+
+TIP: You can build & deploy in one single step by doing `mvn clean package -DskipTests -Dquarkus.kubernetes.deploy=true`
+
+Check that pods are running. Note that depending on available cluster resources, the fhir-server pod may take up to 5 minutes to start.
+
+[source,shell]
+----
+$ kubectl get pods
+
+NAME                                                     READY     STATUS    RESTARTS   AGE
+camel-quarkus-examples-fhir-5d48f4d85c-sjl8k             1/1       Running   0          21s
+fhir-server-5c667bccfc-52xfz                             1/1       Running   0          21s
+----
+
+To interact with the application, set the `APPLICATION_HOST` variable to whatever host / port combination the application is exposed on in your cluster.
+
+[source,shell]
+----
+$ APPLICATION_HOST=<application exposed host here>
+----
+
+Next, upload some patient data.
+
+[source,shell]
+----
+$ curl -X POST -H 'Content-Type: application/json' --data-binary @src/test/resources/data/hl7v2.patient "http://${APPLICATION_HOST}/api/patients"
+----
+
+A JSON response will be generated of the patient record.
+
+[source,json]
+----
+{
+  "resourceType": "Patient",
+  "id": "1",
+  "name": [
+    {
+      "family": "Price",
+      "given": [
+        "Vincent"
+      ]
+    }
+  ]
+}
+----
+
+Use the `id` value to retrieve the patient record.
+
+[source,shell]
+----
+$ curl "http://${APPLICATION_HOST}/api/patients/1"
+----
+
+To clean up do.
+
+[source,shell]
+----
+$ kubectl delete all -l app.kubernetes.io/name=camel-quarkus-examples-fhir
+----
+
+[NOTE]
+====
+If you need to configure container resource limits & requests, or enable the Quarkus Kubernetes client to trust self signed certificates, you can find these configuration options in `src/main/resources/application.properties`. Simply uncomment them and set your desired values.
+====
+
+==== Deploying to OpenShift
+
+To start a Source To Image (S2I) build and deploy the application.
+
+[source,shell]
+----
+$ mvn clean package -DskipTests -Dquarkus.kubernetes.deploy=true -Dopenshift
+----
+
+You can check the pod status and tail logs using the commands mentioned above in the Kubernetes section. Use the `oc` binary instead of `kubectl` if preferred.
+
+To interact with the application, first identify the OpenShift route URL.
+
+[source,shell]
+----
+$ APPLICATION_HOST=$(oc get route camel-quarkus-examples-fhir -o jsonpath='{.spec.host}')
+----
+
+Next, upload some patient data.
+
+[source,shell]
+----
+$ curl -X POST -H 'Content-Type: application/json' --data-binary @src/test/resources/data/hl7v2.patient "http://${APPLICATION_HOST}/api/patients"
+----
+
+A JSON response will be generated of the patient record.
+
+[source,json]
+----
+{
+  "resourceType": "Patient",
+  "id": "1",
+  "name": [
+    {
+      "family": "Price",
+      "given": [
+        "Vincent"
+      ]
+    }
+  ]
+}
+----
+
+Use the `id` value to retrieve the patient record.
+
+[source,shell]
+----
+$ curl "http://${APPLICATION_HOST}/api/patients/1"
+----
+
+The JSON response should match the value returned on the create patient request.
+
+To clean up do.
+
+[source,shell]
+----
+$ oc delete all -l app.kubernetes.io/name=camel-quarkus-examples-fhir
 ----
 
 == Feedback
