--- a/jms-jpa/README.adoc
+++ b/jms-jpa/README.adoc
@@ -90,7 +90,7 @@ $prod.quarkus.datasource.password=admin
 %prod.quarkus.datasource.jdbc.url=mysql://localhost:3306/testdb
 %prod.quarkus.datasource.jdbc.transactions=xa
 
-%prod.quarkus.hibernate-orm.database.generation=none
+%prod.quarkus.hibernate-orm.schema-management.strategy=none
 
 %prod.quarkus.artemis.url=tcp://localhost:61616
 %prod.quarkus.artemis.username=admin
