Unify commands for the native build

--- a/cluster-leader-election/README.adoc
+++ b/cluster-leader-election/README.adoc
@@ -56,7 +56,7 @@ To prepare a native executable using GraalVM, run the following command:
 
 [source,shell]
 ----
-$ mvn clean package -Pnative
+$ mvn clean package -Dnative
 ----
 
 == Local Playground
