--- a/aws-lambda/README.adoc
+++ b/aws-lambda/README.adoc
@@ -46,7 +46,7 @@ To prepare a native executable using GraalVM, run the following command:
 
 [source,shell]
 ----
-$ mvn clean package -DskipTests -Pnative
+$ mvn clean package -DskipTests -Dnative
 $ ./target/*-runner
 ----
 
