--- a/aws2-s3/README.adoc
+++ b/aws2-s3/README.adoc
@@ -82,7 +82,7 @@ To prepare a native executable using GraalVM, run the following command:
 
 [source,shell]
 ----
-$ mvn clean package -Pnative
+$ mvn clean package -Dnative
 $ ./target/*-runner
 ...
 [io.quarkus] (main) camel-quarkus-examples-... started in 0.013s.
