--- a/cxf-soap/README.adoc
+++ b/cxf-soap/README.adoc
@@ -214,7 +214,7 @@ To prepare a native executable using GraalVM, run the following command:
 
 [source,shell]
 ----
-$ mvn clean package -Pnative
+$ mvn clean package -Dnative
 $ ./target/*-runner
 ----
 
