--- a/jpa-idempotent-repository/README.adoc
+++ b/jpa-idempotent-repository/README.adoc
@@ -108,7 +108,7 @@ To prepare a native executable using GraalVM, run the following commands:
 
 [source,shell]
 ----
-mvn clean package -DskipTests -Pnative
+mvn clean package -DskipTests -Dnative
 ./target/*-runner
 ----
 
