--- a/timer-log-main/README.adoc
+++ b/timer-log-main/README.adoc
@@ -62,7 +62,7 @@ To prepare a native executable using GraalVM, run the following command:
 
 [source,shell]
 ----
-$ mvn clean package -Pnative
+$ mvn clean package -Dnative
 $ ./target/*-runner Hello 2
 ...
 [example] (Camel (camel-6) thread #8 - timer://foo) Exchange[Body: Hello]
