--- a/vertx-websocket-chat/README.adoc
+++ b/vertx-websocket-chat/README.adoc
@@ -47,7 +47,7 @@ To prepare a native executable using GraalVM, run the following command:
 
 [source,shell]
 ----
-$ mvn clean package -Pnative
+$ mvn clean package -Dnative
 $ ./target/*-runner
 ----
 
